--- a/main.css
+++ b/main.css
@@ -1,29 +1,104 @@
 :root{
     background-color: rgb(255, 255, 255);
     font-size: 62.5%;
+    --background: #E5FFB3;
+    --background-accent: #DBF8A3;
+    --background-accent-2: #BDE66E;
+    --light: #07ffd6;
+    --dark: #06e4bf;
+    --text: #025600;
+    
 }
-
 *{
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
-    color: black;
-
 }
+
+body{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 100;
+    max-width: 1200px;
+    margin: 0 auto;
+    background: url(istockphoto.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+   color: whitesmoke;
+}
+
 .container{
     width: 100vh;
     height: 100vh;
+    color: whitesmoke;
     display: flex;
     justify-content: center;
-    max-width: 80rem;
     margin: 0 auto;
     align-items: center;
-
+    padding: 60px;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+}
+.flex-column{
+    align-items: center;
+    justify-content: center
 }
 
 h1{
     text-align: center;
-    color: rgb(38, 58, 233);
+    color: rgb(255, 255, 255);
     font-weight: bolder;
+    font-size: 3.2em ;
+    
+}
+a{
+   text-align: left;
+   display: flex;
+   flex-direction: column;
+}
+
+/*BUTTONS*/
+.btn{
+    font-size: 1.9em;
+    font-weight: bold;
+    display:  block;
+    padding: 15px;
+    width: 150px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    margin-bottom: 14px;
+    text-decoration:none ;
+    text-align:center ;
+    border-radius: 7px;
+    background-size: 100% 100%;
+    box-shadow: 0 0 0 3px var(--light) inset;
+    color: rgb(241, 247, 246);
+    background-color:rgb(8, 110, 88) ;
+   
+}
+
+.btn:hover{
+    background-image: linear-gradient(
+    145deg,
+    transparent 10%,
+    var(--dark)10% 20%,
+    transparent 20% 30%,
+    var(--dark)30% 40%,
+    transparent 40% 50%,
+    var(--dark)50% 60%,
+    transparent 60% 70%,
+    var(--dark)70% 80%,
+    transparent 80% 90%,
+    var(--dark)90% 100%
+    );
+    animation: background 3s linear infinite;
+}
+
+@keyframes background{
+     0%{
+         background-position: 0 0;
+     }
+     100%{
+         background-position:400px 0
+     }
 }
